sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:18: error: ')' expected but integer literal found.
                avantBlanc -=1)
                             ^DutchFlagAlgo:25: error: ';' expected but integer literal found.
                fin-=1)
                     ^